--- a/src/components/UI/Navigation/Toolbar/Toolbar.css
+++ b/src/components/UI/Navigation/Toolbar/Toolbar.css
@@ -22,6 +22,18 @@
     height: 80%;
 }
 
+.BurgerMenu {
+    width: 35px;
+    height: 4px;
+    background-color: white;
+    margin: 6px;
+    display: flex;
+    flex-direction: column;
+    border-radius: 4px;
+}
+
+
+
 @media (max-width: 499px) {
     .DesktopOnly {
         display: none;
