--- a/src/components/UI/Spinner/Spinner.css
+++ b/src/components/UI/Spinner/Spinner.css
@@ -8,7 +8,7 @@
   height: 4em;
 }
 .loader {
-  color: #3d1f4e;
+  color: #4d2b15;
   text-indent: -9999em;
   margin: 88px auto;
   position: relative;
